--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
         <ul class="feature-list list">
           <li>
             <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <p class="text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
             <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <p class="text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
             <h3 class="title">ПЛАНУВАННЯ</h3>
-            <p>
+            <p class="text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
             <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <p class="text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -129,7 +129,7 @@
               height="260"
             />
             <h3 class="title">Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -139,7 +139,7 @@
               height="260"
             />
             <h3 class="title">Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -149,7 +149,7 @@
               height="260"
             />
             <h3 class="title">Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
